# pixelflow

./: .gitignore  README.md  pyproject.toml
pixelflow/: __init__.py  core.py
pixelflow/annotate/: __init__.py
pixelflow/annotations/: __init__.py
pixelflow/colors/: __init__.py
pixelflow/draw/: __init__.py  color.py  core.py
pixelflow/predictions/: __init__.py
pixelflow/tests/: polygon.txt  simplify_polygon.py
pixelflow/validators/: __init__.py
pixelflow/visualise/: __init__.py
pixelflow/visualize/: __init__.py
pixelflow/zones/: __init__.py
tests/: polygon.txt  simplify_polygon.py
